Fix the behavior of the timer which jumped around due to different character sizes.

--- a/src/App.css
+++ b/src/App.css
@@ -25,9 +25,14 @@ p {
   margin: 0 12%;
 }
 
-.timer h3 {
+.timer div {
+  font-size: 2.5rem;
   padding-bottom: 1rem;
+  width: 10rem;
+  margin: 0 auto;
+  text-align: left;
 }
+
 
 .main-container {
   margin: 6% 10%;
